[gd_scene load_steps=7 format=3 uid="uid://d00kyep1e0rt8"]

[ext_resource type="Script" path="res://scripts/buy_cat.gd" id="1_5si4c"]
[ext_resource type="Texture2D" uid="uid://lx62erdx7p34" path="res://images/cats/originals/bob.png" id="2_4ddlb"]
[ext_resource type="PackedScene" uid="uid://pwngge8ttviq" path="res://scenes/floating_text.tscn" id="3_wan24"]
[ext_resource type="Texture2D" uid="uid://bkf57disno6ye" path="res://images/catcoin/stackable_catcoin.png" id="4_lcthn"]
[ext_resource type="LabelSettings" uid="uid://bipvhqgn1pls7" path="res://themes/smol_label_with_box.tres" id="5_3q7v3"]

[sub_resource type="Shortcut" id="Shortcut_dl3gv"]

[node name="Cat" type="HBoxContainer"]
process_mode = 3
visible = false
size_flags_vertical = 8
theme_override_constants/separation = -8
script = ExtResource("1_5si4c")

[node name="AdoptTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="AdoptButton" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
action_mode = 0
shortcut = SubResource("Shortcut_dl3gv")
texture_normal = ExtResource("2_4ddlb")
stretch_mode = 0

[node name="FloatingText" parent="AdoptButton" instance=ExtResource("3_wan24")]
unique_name_in_owner = true
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = -2

[node name="Coin" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("4_lcthn")
expand_mode = 1

[node name="CostLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "999k"
label_settings = ExtResource("5_3q7v3")
vertical_alignment = 2

[connection signal="timeout" from="AdoptTimer" to="." method="_on_adopt_timer_timeout"]
[connection signal="mouse_entered" from="AdoptButton" to="." method="_on_adopt_button_mouse_entered"]
[connection signal="mouse_exited" from="AdoptButton" to="." method="_on_adopt_button_mouse_exited"]
[connection signal="pressed" from="AdoptButton" to="." method="_on_adopt_button_pressed"]
